[package]
name    = "karabiner"
version = "0.1.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
repository = "https://github.com/feb29/karabiner"
keywords = ["thunk", "lazy", "mutex"]
license  = "Unlicense/MIT"
readme   = "README.md"
description = "Toolbelt"

[workspace]
members = ["karabiner-onetime", "karabiner-thunk"]

[dependencies]
karabiner-onetime = { path = "./karabiner-onetime", version = "0.1" }
karabiner-thunk   = { path = "./karabiner-thunk",   version = "0.1" }
