[package]
name    = "karabiner-onetime"
version = "0.1.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
repository = "https://github.com/feb29/karabiner"
license  = "MIT/Apache-2.0"
keywords = ["lock", "mutex"]
description = "onetime lock, useful sometimes."


[dependencies]

[dependencies.parking_lot]
version = "0.4"